--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
@@ -25,6 +26,11 @@
     "eslint-plugin-vue": "^4.0.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "2.6.2",
-    "prettier": "1.14.3"
+    "prettier": "1.14.3",
+    "eslint-config-google": "^0.9.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "husky": "^0.14.3",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1"
   }
 }
