--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
   },
   "dependencies": {
     "@nuxtjs/bulma": "^1.2.0",
+    "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.3.5",
+    "apollo-client": "^2.4.2",
+    "apollo-link-http": "^1.5.5",
     "cross-env": "^5.2.0",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "node-fetch": "^2.2.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
