--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "^4.0.0",
     "husky": "^0.14.3",
-    "node-sass": "^4.9.3",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
     "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "sass-loader": "^7.1.0"
+    "prettier-eslint-cli": "^4.7.1"
   }
 }
